--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ header{
 /*#### ABOUT ####*/
 
 #about{
-    min-width: 100%;  
+    max-width: 100%;  
 }
 
 .about-container{
@@ -499,9 +499,6 @@ header{
         margin-bottom: 5%;
     }
 
-}
-
-@media screen and (max-width:720px){
     .portfolio{
         display: grid;
         grid-template-columns: auto auto;
@@ -522,6 +519,7 @@ header{
     .portfolio > div:nth-child(7){
         border-bottom-left-radius: 10px;
     }
+
 }
 
 @media screen and (max-width:480px){
